basic changes to the content

--- a/en_US.html
+++ b/en_US.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt_BR">
 <head>
   <meta charset="utf-8">
   <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Page title -->
-  <title>Vertica - Retina Ready Resume / CV & Portfolio</title>
+  <title>Romário Lima</title>
   <!-- /Page title -->
 
   <!-- CSS Files
@@ -43,12 +43,9 @@
 
   <!-- Favicon and Touch Icons
   ========================================================= -->
-  <link rel="shortcut icon" href="favicon-vertica.ico" type="image/x-icon">
-  <link rel="icon" href="favicon-vertica.ico" type="image/x-icon">
-  <link href="apple-touch-icon-144.png" rel="apple-touch-icon-precomposed" sizes="144x144">
-  <link href="apple-touch-icon-114-precomposed.png" rel="apple-touch-icon-precomposed" sizes="114x114">
-  <link href="apple-touch-icon-72-precomposed.png" rel="apple-touch-icon-precomposed" sizes="72x72">
-  <link href="apple-touch-icon-57.png" rel="apple-touch-icon-precomposed">
+  <link rel="shortcut icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="favicon.png " type="image/png">
+
   <!-- /Favicon
   ========================================================= -->
 </head>
@@ -89,7 +86,7 @@
   <!-- Menu header -->
   <div class="side-menu-name">
     <!-- edit with your name -->
-    John <strong>Rex</strong>
+    Romário <strong>Lima</strong>
     <!-- /edit with your name -->
   </div>
   <!-- edit with your Job -->
@@ -100,21 +97,21 @@
   <!-- Main Navigation -->
   <nav id="side-menu" class="side-menu-este">
     <ul class="nav side-menu-nav">
-      <li><a href="#intro"><i class="fa fa-angle-right"></i> Intro</a></li>
-      <li><a href="#education"><i class="fa fa-angle-right"></i> Education</a></li>
-      <li><a href="#works"><i class="fa fa-angle-right"></i> Work Experience</a></li>
-      <li><a href="#skills"><i class="fa fa-angle-right"></i> Skills</a></li>
-      <li><a href="#interests"><i class="fa fa-angle-right"></i> Interests</a></li>
-      <li><a href="#portfolio"><i class="fa fa-angle-right"></i> Portfolio</a></li>
-      <li><a href="#contact"><i class="fa fa-angle-right"></i> Contact</a></li>
+      <li><a href="#intro"><i class="fa fa-angle-right"></i> Introdução</a></li>
+      <li><a href="#education"><i class="fa fa-angle-right"></i> Educação</a></li>
+      <li><a href="#works"><i class="fa fa-angle-right"></i> Experiência Profissional</a></li>
+      <li><a href="#skills"><i class="fa fa-angle-right"></i> Habilidades</a></li>
+      <li><a href="#interests"><i class="fa fa-angle-right"></i> Interesses</a></li>
+      <li><a href="#portfolio"><i class="fa fa-angle-right"></i> Portfólio</a></li>
+      <li><a href="#contact"><i class="fa fa-angle-right"></i> Contato</a></li>
     </ul>
   </nav>
   <!-- /Main Navigation-->
 
   <!-- Other Buttons -->
   <div class="side-menu-buttons">
-    <a href="#" class="btn btn-side-menu"><i class="fa fa-download"></i> Download my resume</a>
-    <a href="#" class="btn btn-side-menu"><i class="fa fa-envelope-o"></i> Send me a message</a>
+    <a href="#" class="btn btn-side-menu"><i class="fa fa-download"></i> Fazer Download</a>
+    <a href="#" class="btn btn-side-menu"><i class="fa fa-envelope-o"></i> Enviar Mensagem</a>
   </div>
   <!-- /Other Buttons-->
 </div>
@@ -145,10 +142,10 @@
       <div class="row">
         <div class="header-buttons col-md-10 col-md-offset-1">
           <!-- Download Resume Button -->
-          <a href="#" class="btn btn-default btn-top-resume"><i class="fa fa-download"></i><span class="btn-hide-text">Download my resume</span></a>
+          <a href="#" class="btn btn-default btn-top-resume"><i class="fa fa-download"></i><span class="btn-hide-text">Fazer Download</span></a>
           <!-- /Download Resume Button -->
           <!-- Mail Button -->
-          <a href="#" class="btn btn-default btn-top-message"><i class="fa fa-envelope-o"></i><span class="btn-hide-text">Send me a message</span></a>
+          <a href="#" class="btn btn-default btn-top-message"><i class="fa fa-envelope-o"></i><span class="btn-hide-text">Enviar Mensagem</span></a>
           <!-- /Mail Button -->
         </div>
       </div>
@@ -173,10 +170,10 @@
         <!-- Right Columm -->
         <div class="col-md-7">
           <!-- Welcome Title-->
-          <h1 class="intro-title1">Hi, i'm <span class="color1 bold">John Rex!</span></h1>
+          <h1 class="intro-title1">Olá, eu sou <span class="color1 bold">Romário!</span></h1>
           <!-- /Welcome Title -->
           <!-- Job - -->
-          <h2 class="intro-title2">Designer / Web Developer</h2>
+          <h2 class="intro-title2">Consultor/Professor de TI</h2>
           <!-- /job -->
           <!-- Description -->
           <p><strong>Turpis, sit amet iaculis dui consectetur at.</strong> Cras sagittis molestie orci. <strong>Suspendisse ut laoreet mi</strong>. Phasellus eu tortor vehicula, blandit enim eu, auctor massa. Nulla ultricies tortor dolor, sit amet suscipit enim <strong>condimentum id</strong>. Etiam eget iaculis tellus.  Varius sit amet.</p>
